<resources>
    <string name="app_name">Kalender Reborn</string>

    <string-array name="weekDays">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="weekDaysS">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string-array name="weekDaysSS">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="monthss">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="drawerToggleOpen">Open</string>
    <string name="drawerToggleClose">Close</string>

    <string name="dummy_date">05</string>
    <string name="dummy_weekday">Mon</string>
    <string name="dummy_text">Nothing scheduled</string>

    <string name="drawermenu_newevent">New event</string>
    <string name="drawermenu_seeevents">See events</string>
    <string name="drawermenu_settings">Settings</string>
    <string name="drawermenu_exit">Log out</string>

    <string name="WORD_week">Week</string>


    <string name="title_activity_addevent1">Add Event</string>
    <string name="title_activity_addevent2">Edit Event</string>
    <string name="title_activity_viewevent">View Events</string>
    <string name="title_activity_settings">Settings</string>


    <string name="account_login">Already registered? Login here!</string>
    <string name="account_signup">Don\'t have an account? Signup here!</string>
    <string name="account_forgotpassword">Can\'t login? Reset password!</string>



    <string name="addevent_titlelabel">Name</string>
    <string name="addevent_titleplaceholder">Name of event</string>
    <string name="addevent_startlabel_date">Start date</string>
    <string name="addevent_startplaceholder_date">Date</string>
    <string name="addevent_startlabel_time">Start time</string>
    <string name="addevent_startplaceholder_time">Time</string>
    <string name="addevent_endlabel_date">End date</string>
    <string name="addevent_endplaceholder_date">Date</string>
    <string name="addevent_endlabel_time">End time</string>
    <string name="addevent_endplaceholder_time">Time</string>
    <string name="addevent_typelabel">Type</string>
    <string name="addevent_typespinner_default">Choose event type</string>
    <string-array name="addevent_typespinner">
        <item>Set a type…</item>
        <item>Watching birds</item>
        <item>Playing with Lego</item>
        <item>Pondering about life</item>
    </string-array>
    <string name="addevent_setalarmlabel">Set alarm</string>
    <string name="addevent_alarmdateplaceholder">Alarm date</string>
    <string name="addevent_alarmtimeplaceholder">Alarm time</string>


    <!-- AddEvent validtaion -->
    <string name="addevent_val_spinErrToast">You must select a type</string>
    <string name="addevent_val_nameTooShort">Choose a name for the event</string>
    <string name="addevent_val_startDateNotSet">Please set a start date</string>
    <string name="addevent_val_startTimeNotSet">Please set a start time</string>
    <string name="addevent_val_endDateNotSet">Please set a end date</string>
    <string name="addevent_val_endTimeNotSet">Please set a end time</string>
    <string name="addevent_val_alarmDateNotSet">Please set a alarm date</string>
    <string name="addevent_val_alarmTimeNotSet">Please set a alarm time</string>

    <!-- Signup validtaion -->
    <string name="signup_val_error_occurred">Error: </string>
    <string name="signup_val_email_empty">Please enter your email</string>
    <string name="signup_val_email_tooshort">Email is too short</string>
    <string name="signup_val_email_notvalid">Email is not valid</string>
    <string name="signup_val_firstname_empty">Please enter your first name</string>
    <!-- NOT USED -->
    <string name="signup_val_phonenr_empty">Please enter your phone number</string>
    <string name="signup_val_phonenr_tooshort">Your phone number is too short</string>
    <string name="signup_val_phonenr_notvalid">Please enter a valid phone number</string>
    <!-- ____________ -->
    <string name="signup_val_password_empty">Please enter a password</string>
    <string name="signup_val_password_tooshort">Password is too short</string>
    <string name="signup_val_password_nomatch">Passwords dosen\'t match</string>
    <string name="signup_val_passwordrepeat_empty">Please confirm your password</string>



    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dummy_for_test">test_option</string>

    <!-- Strings for dialogs, titles, pos and negs, defaults -->
    <string name="viewevent_delete_title">Delete Entry</string>
    <string name="viewevent_delete_message">Are you sure you want to delete this entry?</string>
    <string name="calendaradapter_newentry_title">New Entry</string>
    <string name="calendaradapter_newentry_message">Make a new entry from this date?</string>
    <string name="drawermenu_logout_title">Logout</string>
    <string name="drawermenu_logout_message">Are you sure you want to logout?</string>
    <string name="counterdialog_default_title">Set alarm time</string>
    <string name="dialog_default_yes">Yes</string>
    <string name="dialog_default_done">Done</string>
    <string name="dialog_default_continue">Continue</string>
    <string name="dialog_default_ok">OK</string>
    <string name="dialog_default_agree">Agree</string>
    <string name="dialog_default_no">No</string>
    <string name="dialog_default_cancel">Cancel</string>
    <string name="dialog_default_discard">Discard</string>
    <string name="dialog_default_deny">Deny</string>

</resources>
